--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <body>
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="https://molenco.github.io/infographics/">Interactive</a></li>
 
                 <li>
-                    <a href="#">Services</a>
+                    <a href="https://vimeo.com/282554521">Animation</a>
                     
                 </li>
                 <li><a href="#">About</a>
