--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     
                     
                 </li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Contacttt</a></li>
             </ul>
         </nav>
 
