--- a/about.html
+++ b/about.html
@@ -24,18 +24,22 @@
 
 
     <body>
-        <nav>
-            <ul>
-                <li><a href="index.html"> <img src="zanahoria.png" alt="Smiley face" height="20" width="20"> </a></li>
-                <li><a href="https://molenco.github.io/infographics/">Interactive</a></li>
-                <li><a href="https://vimeo.com/282554521">Animation</a></li>
-                <li><a href="#">About</a></li>                 
-                <li class="contact_btn"><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-        
+            <nav>
+                    <ul>
+                        <li><a href="index.html"> <img src="zanahoria.png" alt="Smiley face" height="42" width="42"> </a></li>
+                        <li><a href="https://molenco.github.io/infographics/">Interactive</a></li>
+                        <li><a href="https://vimeo.com/282554521">Animation</a></li>
+                        <li><a href="#">About</a></li>                 
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+           
         <main>
             <h1>Animator and Multimedia developer</h1>
+            <p>Im a Animator and Multimedia developer, studied in the university of Bogotá Jorge Tadeo Lozano a bachelor in Audiovisual and Multimedia development, and been part of the investigation seedbed for 2 years. 
+            <br>
+            I've been part of different productions and projects in the Audiovisual and the Multimedia industry. </p>
+
 
             <iframe src="https://player.vimeo.com/video/282554521" width="640" height="360" frameborder="0"
                 webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
