--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
         
         <main>
             <h1>Animator and Multimedia developer</h1>
+            <p>Hi, im Juan Enrique Arango Audiovisual and Multimedia Developer and i've been working on the industry for almost 3 years, Mostly in the Animation, Editing and Web Development Area.
+
+Im too the director of Media in "La Pecera" a non profit foundation with cultural purposes where i made a workshop to teach people of all ages how the animation its done and im constatly looking for colaborate in new projects.
+
+I was part of one of the seedbeds of the Jorge Tadeo Lozano University, where i met and learnt from animators with a lot of aknowledge.
+
+I have habilities in:
+Animation (3D character, Traditional, Cut Out, Motion Graphics),Illustration, postproduction audio and video, direction y web design (Html, Css, Javascript). </p>
 
             <iframe src="https://player.vimeo.com/video/282554521" width="640" height="360" frameborder="0"
                 webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
