--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
         
         <main>
             <h1>Animator and Multimedia developer</h1>
-
+            <video width = "500" height = "300" controls>
+         <source src = "nagafinal.mp4" type = "video/mp4">
+         This browser doesn't support video tag.
+      </video>
             <iframe src="https://player.vimeo.com/video/282554521" width="640" height="360" frameborder="0"
                 webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             <p><a href="https://vimeo.com/282554521"></p>
